# askgpt_commitmsg

./: README.md  pyproject.toml
askgpt_commitmsg/: askgpt-commitmsg.py  askgpt_commitmsg.py
