[tool.poetry]
name = "askgpt-commitmsg"
version = "0.1.0"
description = ""
authors = ["tlkahn <joshgy@gmail.com>"]
readme = "README.md"
packages = [{include = "askgpt_commitmsg"}]

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
